openshift/dsv/dc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: teste-mongo-quarkus-api
  name: teste-mongo-quarkus-api
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: teste-mongo-quarkus-api
    deploymentconfig: teste-mongo-quarkus-api
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: teste-mongo-quarkus-api
        deploymentconfig: teste-mongo-quarkus-api
    spec:
      containers:
      - args:
        name: teste-mongo-quarkus-api
        image: image-registry.openshift-image-registry.svc:5000/teste-quarkus-mongo/teste-mongo-quarkus-api:1.0.0-jvm
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 400Mi
          limits:
            memory: 400Mi
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /teste-mongo/api/q/health/live
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 5
          successThreshold: 1
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /teste-mongo/api/q/health/ready
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
          successThreshold: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
