openshift/dsv/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: teste-mongo-quarkus-api
  name: teste-mongo-quarkus-api
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: teste-mongo-quarkus-api
    deploymentconfig: teste-mongo-quarkus-api
  sessionAffinity: None
  type: ClusterIP
